# VTKFortran

./: .gitignore  CMakeLists.txt  README.md  api-doc-ford-settings.md  fpm.toml
src/: CMakeLists.txt  vtk_fortran_dataarray_encoder.f90  vtk_fortran_vtk_file.f90
src/lib/: vtk_fortran.f90  vtk_fortran_dataarray_encoder.f90  vtk_fortran_parameters.f90  vtk_fortran_pvtk_file.f90  vtk_fortran_vtk_file.f90  vtk_fortran_vtk_file_xml_writer_abstract.f90  vtk_fortran_vtk_file_xml_writer_appended.f90  vtk_fortran_vtk_file_xml_writer_ascii_local.f90  vtk_fortran_vtk_file_xml_writer_binary_local.f90  vtk_fortran_vtm_file.F90
src/tests/: CMakeLists.txt
